--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,5 @@
 title: クリック連打ツールの作り方
-theme: just-the-docs
+remote_theme: just-the-docs/just-the-docs
 url: https://nigimitama.github.io/click-repeater
+
+search_enabled: false
