--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,11 @@
 title: クリック連打ツールの作り方
 url: https://nigimitama.github.io/click-repeater
 
-remote_theme: just-the-docs/just-the-docs
+
+# remote_theme: just-the-docs/just-the-docs
+remote_theme: pages-themes/leap-day@v0.2.0
 plugins:
-- jekyll-remote-theme 
+- jekyll-remote-theme
 
 search_enabled: false
+markdown: kramdown
