--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -2,8 +2,8 @@ title: クリック連打ツールの作り方
 url: https://nigimitama.github.io/click-repeater
 
 
-# remote_theme: just-the-docs/just-the-docs
-remote_theme: pages-themes/leap-day@v0.2.0
+remote_theme: just-the-docs/just-the-docs
+# remote_theme: pages-themes/leap-day@v0.2.0
 plugins:
 - jekyll-remote-theme
 
